####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = src tests

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO Makefile.am aclocal.m4 configure.ac dia.ico dia1.bmp dia2.bmp README.win32

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS	=	-I m4

CLEANFILES = stamp-h2 dia2code-*.tar.gz
